--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wabot-aq",
+  "name": "bot Boy",
   "version": "2.5.1",
   "description": "Customizable WhatsApp Bot",
   "depecrated": false,
